--- a/CS-IA-Ibasic-Intouch-Re.csproj
+++ b/CS-IA-Ibasic-Intouch-Re.csproj
@@ -108,6 +108,7 @@
     <EmbeddedResource Include="SaveAsForm.resx">
       <DependentUpon>SaveAsForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="client_secret.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
