--- a/CS-IA-Ibasic-Intouch-Re.csproj
+++ b/CS-IA-Ibasic-Intouch-Re.csproj
@@ -70,6 +70,8 @@
   <ItemGroup>
     <Compile Include="Compiler.cs" />
     <Compile Include="GGDrive.cs" />
+    <Compile Include="GGDriveFile.cs" />
+    <Compile Include="GGFileVersion.cs" />
     <Compile Include="IBASICForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +86,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RepositoryForm.Designer.cs">
+      <DependentUpon>RepositoryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SaveAsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +113,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RepositoryForm.resx">
+      <DependentUpon>RepositoryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SaveAsForm.resx">
       <DependentUpon>SaveAsForm.cs</DependentUpon>
     </EmbeddedResource>
