--- a/CS-IA-Ibasic-Intouch-Re.csproj
+++ b/CS-IA-Ibasic-Intouch-Re.csproj
@@ -98,6 +98,12 @@
     <Compile Include="SaveAsForm.Designer.cs">
       <DependentUpon>SaveAsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SaveToDriveForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SaveToDriveForm.Designer.cs">
+      <DependentUpon>SaveToDriveForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="IBASICForm.resx">
       <DependentUpon>IBASICForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SaveAsForm.resx">
       <DependentUpon>SaveAsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SaveToDriveForm.resx">
+      <DependentUpon>SaveToDriveForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="client_secret.json" />
     <None Include="packages.config" />
