--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoCompleteMenu-ScintillaNET" version="1.6.2" targetFramework="net472" />
   <package id="Google.Apis" version="1.52.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.52.0" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.52.0" targetFramework="net472" />
   <package id="Google.Apis.Drive.v3" version="1.52.0.2383" targetFramework="net472" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.1" targetFramework="net472" />
