Created a static string extension class and made the translator case insensitive

--- a/CS-IA-Ibasic-Intouch-Re.csproj
+++ b/CS-IA-Ibasic-Intouch-Re.csproj
@@ -129,6 +129,7 @@
     <Compile Include="SaveToDriveForm.Designer.cs">
       <DependentUpon>SaveToDriveForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="StringExtension.cs" />
     <EmbeddedResource Include="IBASICForm.resx">
       <DependentUpon>IBASICForm.cs</DependentUpon>
     </EmbeddedResource>
