--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoCompleteMenu-ScintillaNET" version="1.6.2" targetFramework="net472" />
+  <package id="cef.redist.x64" version="91.1.23" targetFramework="net472" />
+  <package id="cef.redist.x86" version="91.1.23" targetFramework="net472" />
+  <package id="CefSharp.Common" version="91.1.230" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="91.1.230" targetFramework="net472" />
   <package id="Google.Apis" version="1.52.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.52.0" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.52.0" targetFramework="net472" />
