--- a/packages.config
+++ b/packages.config
@@ -10,6 +10,8 @@
   <package id="Google.Apis.Core" version="1.52.0" targetFramework="net472" />
   <package id="Google.Apis.Drive.v3" version="1.52.0.2383" targetFramework="net472" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net472" />
+  <package id="Microsoft.PowerShell.5.1.ReferenceAssemblies" version="1.0.0" targetFramework="net472" />
+  <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.1" targetFramework="net472" />
