Global/local mode button

--- a/CS-IA-Ibasic-Intouch-Re.csproj
+++ b/CS-IA-Ibasic-Intouch-Re.csproj
@@ -123,6 +123,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compiler.cs" />
+    <Compile Include="customButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="GGDrive.cs" />
     <Compile Include="GGDriveFile.cs" />
     <Compile Include="IBASICForm.cs">
