--- a/CS-IA-Ibasic-Intouch-Re.csproj
+++ b/CS-IA-Ibasic-Intouch-Re.csproj
@@ -123,9 +123,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compiler.cs" />
-    <Compile Include="customButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="GGDrive.cs" />
     <Compile Include="GGDriveFile.cs" />
     <Compile Include="IBASICForm.cs">
@@ -195,6 +192,7 @@
     <EmbeddedResource Include="SaveToDriveForm.resx">
       <DependentUpon>SaveToDriveForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="client_secret.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -221,6 +219,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Syntax.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
